--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     
     <div id="admin-dashboard" style="display:none;">
         <h1>Admin Dashboard</h1>
+        <button id="view-results">View Results</button>
         <div id="admin-results"></div>
     </div>
     
@@ -39,4 +40,4 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-firestore.js"></script>
     <script type="module" src="app.js"></script>
 </body>
-</html> 
+</html>
