--- a/index.html
+++ b/index.html
@@ -83,12 +83,8 @@
         <button id="add-question-btn">Add Question</button>
 
     </div>
+  <div id="view-results">
 
-  <div id="view-results" style="display:none;">
-
-        <h2>View Results</h2>
-
-        <div id="user-results"></div>
 
     </div>
 
