--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <button id="login-btn">Login</button>
 
         <button id="register-btn">Register</button>
+<input type="email" id="reset-email" placeholder="Enter your email">
+<button id="reset-password-btn">Reset Password</button>
 
     </div>
 
