--- a/quiz.html
+++ b/quiz.html
@@ -101,7 +101,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-firestore.js"></script>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="quiz.js"></script>
 
 </body>
 
