--- a/index.html
+++ b/index.html
@@ -3,20 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App</title>
+    <title>Quiz Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to the Quiz App</h1>
-    <nav>
-        <a href="signup.html">Sign Up</a>
-        <a href="login.html">Login</a>
-        <a href="quiz.html">Play Quiz</a>
-        <a href="leaderboard.html">Leaderboard</a>
-    </nav>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-    <script src="app.js"></script>
+    <header>
+        <h1>Friends Test Quiz</h1>
+    </header>
+    <main>
+        <section id="quiz-selection">
+            <h2>Select a Quiz</h2>
+            <ul id="quiz-list">
+                <!-- Quiz list will be populated here -->
+            </ul>
+        </section>
+        <section id="quiz-container" style="display: none;">
+            <h2 id="quiz-title"></h2>
+            <form id="quiz-form">
+                <!-- Questions will be populated here -->
+            </form>
+            <button id="submit-quiz">Submit</button>
+        </section>
+        <section id="result-container" style="display: none;">
+            <h2>Your Result</h2>
+            <p id="result-message"></p>
+            <button id="share-whatsapp">Share on WhatsApp</button>
+        </section>
+    </main>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
