--- a/quizs.html
+++ b/quizs.html
@@ -15,9 +15,13 @@
             <input type="number" id="numQuestions" min="1" max="15" placeholder="5">
             <label for="subject"><i class="fas fa-book"></i> Select Subject:</label>
             <select id="subject">
-              <option value="biology">Full Biology</option>
-              <option value="Chap1">Living World</option>
-              <option value="Chap2">Biological Classification</option>
+              <option value="biology">Full Biology</option>              
+                <option value="Chap1">Living World </option>
+                <option value="Chap2">Biological Classification</option>
+                <option value="Chap3">Plant Kindom</option>
+                <option value="Chap4">Animal Kindom</option>
+                <option value="Chap5">Morphology In Flowering Plants</option>
+                <option value="Chap6">Anatomy In Flowering Plants</option>
             </select>
             <button id="startButton" class="button"><i class="fas fa-play"></i> Start</button>
         </div>
